# rust_gpu_nix

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
builder/: Cargo.toml
builder/src/: main.rs
crates/runner/: Cargo.toml  build.rs
crates/runner/src/: lib.rs  render.rs
crates/runners/wgpu-runner/: Cargo.toml
crates/shaders/shared/: Cargo.toml
crates/shaders/simplest-shader/: Cargo.toml
crates/shared/src/: lib.rs
crates/simplest-shader/: Cargo.toml
crates/simplest-shader/src/: lib.rs
runners/wgpu-runner/: Cargo.toml
runners/wgpu-runner/src/: main.rs
shaders/: Cargo.toml
shaders/simplest-shader/: Cargo.toml
shaders/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
