[package]
name = "runner"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
bytemuck.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
futures = { workspace = true, features = ["std"] }
shared = { workspace = true }
strum = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
winit = { workspace = true }

[lints]
workspace = true
